feat: show off site data usage

--- a/src/site/_includes/layouts/default.html
+++ b/src/site/_includes/layouts/default.html
@@ -9,6 +9,10 @@
 
   {{ content | safe }}
 
+  <footer>
+    Made with 💖 by {{ site.author }}
+  </footer>
+
   {% include("components/scripts.html") %}
 </body>
 </html>
