feat: create setup page

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,3 +1,32 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
+  margin: 0;
   font-family: Helvetica, sans-serif;
+  padding: 10px;
+}
+
+h1 {
+  margin: 0;
+}
+
+a {
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  background: #3742fa;
+  padding: 10px;
+  border-radius: 3px;
+
+  &:active {
+    transform: scale(.98);
+  }
+}
+
+.container {
+  max-width: 1080px;
+  margin-left: auto;
+  margin-right: auto;
 }
